Minor Changes
Took 4 minutes